--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,11 @@
     <string name="view_infofind">ID/PW찾기</string>
     <string name="view_invite">커플초대</string>
     <string name="view_apply">커플신청</string>
+    <string name="view_applywait">커플 신청이 있습니다.</string>
+
+    <string name="consent">수락</string>
+    <string name="cancel">취소</string>
+    <string name="refuse">거절</string>
 
     <string name="edit_email_notinput">이메일을 입력해주세요.</string>
     <string name="edit_pw_notinput">비밀번호를 입력해주세요.</string>
@@ -25,8 +30,10 @@
     <string name="error_connect_couple">해당 회원은 이미 커플입니다.</string>
     <string name="error_connect_apply">해당 회원은 이미 커플신청을 받았습니다.\n확인하여 주시기 바랍니다.</string>
     <string name="error_connect_email">이메일이 존재하지 않습니다.\n확인하여 주시기 바랍니다.</string>
+    <string name="error_connect_this">아쉽게도 본인과 연애는 구현되지 않았습니다.</string>
 
     <string name="toast_signup_complete">회원가입 되었습니다.</string>
+    <string name="toast_couple_connect">커플신청 되었습니다.</string>
 
     <string name="permission_sms">커플 SMS초대시 문자보내기 권한이 필요합니다.</string>
     <string name="permission_sms_setting">왜 거부하셨어요...\n권한이 없으면 카카오톡 초대밖에 사용하지 못한답니다.\n하지만 [설정] > [권한] 에서 권한을 허용할 수 있어요.</string>
