CoupleapplyActivity - 거절할 경우 값을 검색해서 couple를 지우고 다시 업데이트 CoupleconnectActivity - 자신이 신청한게 있을경우 체크하여 분기처리 MainClass - 로그제거 strings.xml - 신청한게 있는경우 에러문구 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,8 @@
     <string name="error_connect_apply">해당 회원은 이미 커플신청을 받았습니다.\n확인하여 주시기 바랍니다.</string>
     <string name="error_connect_email">이메일이 존재하지 않습니다.\n확인하여 주시기 바랍니다.</string>
     <string name="error_connect_this">아쉽게도 본인과 연애는 구현되지 않았습니다.</string>
-
+    <string name="error_connect_overlap">이미 커플신청을 하셨습니다.\n바람은 안되요!!</string>
+    
     <string name="toast_signup_complete">회원가입 되었습니다.</string>
     <string name="toast_couple_connect">커플신청 되었습니다.</string>
 
