--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="view_invite">커플초대</string>
     <string name="view_apply">커플신청</string>
     <string name="view_applywait">커플 신청이 있습니다.</string>
+    <string name="view_couplenm">커플명</string>
 
     <string name="consent">수락</string>
     <string name="cancel">취소</string>
@@ -22,6 +23,7 @@
     <string name="edit_email_notinput">이메일을 입력해주세요.</string>
     <string name="edit_pw_notinput">비밀번호를 입력해주세요.</string>
     <string name="edit_email_name">이름을 입력해주세요.</string>
+    <string name="edit_couplenm_notinput">커플명을 입력해주세요.(10자 이내)</string>
 
     <string name="error_email_already">이메일 주소가 이미 사용중인 주소입니다.</string>
     <string name="error_pw_notmatch">비밀번호가 일치하지 않습니다.</string>
@@ -35,6 +37,7 @@
     
     <string name="toast_signup_complete">회원가입 되었습니다.</string>
     <string name="toast_couple_connect">커플신청 되었습니다.</string>
+    <string name="toast_couple_wait">상대방의 수락을 기다리는 중입니다.\n잠시만 기다려 주세요.</string>
 
     <string name="permission_sms">커플 SMS초대시 문자보내기 권한이 필요합니다.</string>
     <string name="permission_sms_setting">왜 거부하셨어요...\n권한이 없으면 카카오톡 초대밖에 사용하지 못한답니다.\n하지만 [설정] > [권한] 에서 권한을 허용할 수 있어요.</string>
