URL 미리보기에 대해서 찾아서 다시 작업
rounded.xml - 홈화면 라운드 처리
drawer_header.xml - 홈화면 네비게이션 드로우
home_activity.xml - 홈화면
item_home.xml - 홈화면에 들어갈 링크아이템들
drawer.xml - 네비게이션에 들어갈 메뉴
menu.xml - 메뉴아이템
strings.xml - 메뉴아이템 문구

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,7 @@
 
     <string name="kakao_app_key">3591656e665defc7ca7606a6c1dade3a</string>
 
+    <string name="menu_category">카테고리</string>
+    <string name="menu_setting">환경설정</string>
+    <string name="menu_logout">로그아웃</string>
 </resources>
