카테고리 삭제 예정 클립보드 저장시 알림으로 알려줌
알림으로 들어올때 바로 링크 등록하도록 하는걸 개발합시다.뀨뀨

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,29 @@
     <string name="menu_category">카테고리</string>
     <string name="menu_setting">환경설정</string>
     <string name="menu_logout">로그아웃</string>
+
+
+
+    <string name="sub_app_name">MyClips - All Clipboards</string>
+
+    <string name="clip_monitor_service">MyClips Clipboard Monitor</string>
+
+    <string name="create_new_clipboard">New clipboard</string>
+
+    <string name="email_clipboard">Email clipboard</string>
+
+    <string name="list_all_clipboards">List all clipboards</string>
+
+    <string name="delete_clipboard">Delete clipboard</string>
+
+    <string name="context_info">Info</string>
+
+    <string name="context_delete_clip">Delete</string>
+
+    <string name="context_email_clip">Email</string>
+
+    <string name="clip_text_type">Text</string>
+
+    <string name="clip_image_type">Image</string>
+
 </resources>
